# books

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
src/dabble_mcp/: __init__.py  cli.py  db.py  defaults.py  export_loader.py  mcp_server.py  patches.py  tasks.py
src/dabble_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
