[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dabble-mcp"
version = "0.1.0"
description = "Query Dabble exports and generate grounded story-level task packets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dabble-mcp = "dabble_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]